fixed alignment issues on navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,17 @@ p {
 header {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
+
+header a {
+    white-space: nowrap;
+    align-items: center;
+    display: flex;
+    margin-left: 2rem;
+}
+
 
 #logo {
     display: inline-flex;
@@ -49,11 +57,13 @@ header {
     align-items: center;
     font-size: 150%;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 #logo-img {
     width: 8%;
-    justify-content: flex-start;
+    height: 8%;
+    align-self: center;
 }
 
 /* navigation links */
@@ -66,6 +76,11 @@ nav a {
 #menu a:hover {
     border-bottom: 1px solid black;
 }
+
+#menu li {
+    white-space: nowrap;
+}
+
 
 #menu,
 nav {
@@ -82,20 +97,19 @@ ul {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding-inline-start: 40px;
-
+    display: flex;
 }
 
 #menu,
 li {
     list-style-type: none;
-    display: inline-block;
+    margin-right: 10px;
 }
 
 /*Cover image and cover text*/
 
 #cover-image {
-    height: 580px;
+    height: 100%;
     background: url('../images/Cover_image_bkg.jpg') no-repeat;
     background-size: cover;
     background-position: center;
@@ -107,21 +121,21 @@ li {
     text-align: justify;
 }
 
+#hero-image {
+    height: 50vh;
+    position: relative;
+}
+
 #cover-text {
     text-transform: uppercase;
     letter-spacing: 2px;
-
-    bottom: 150px;
-    right: 500px;
-
+    bottom: 5%;
+    left: 5%;
     padding: 10px;
     border-radius: 10%;
-
     width: 200px;
     height: 160px;
-
     background-color: rgba(52, 155, 141, 0.5);
-
     position: absolute;
 }
 
@@ -133,7 +147,7 @@ li {
 
 #intro {
     padding: 20px;
-    width: 95%;
+    /* width: 95%; */
     line-height: 20px;
     clear: both;
 }
@@ -167,7 +181,7 @@ video {
     width: 35%;
     height: auto;
     padding-bottom: 50px;
-  }
+}
 
 /*Chemistry Introduction*/
 #chem-intro {
@@ -363,11 +377,13 @@ p {
     align-items: center;
     display: inline-flex;
 }
+
 #suggestions2 {
     border: 1px solid #999999;
     width: 95%;
     padding: 3px;
 }
+
 #submit {
     font-size: 1.2em;
     color: rgb(11, 11, 100);
@@ -380,13 +396,9 @@ p {
 
 /* For large to medium screens sizes from 1200px wide and down */
 @media screen and (max-width: 1200px) {
-    #menu{
-        flex-direction: column;
-    }
 
-    #cover-text {
-        left: 300px;
-    }
+
+    #cover-text {}
 
     #chem-intro {
         flex-direction: column;
@@ -408,19 +420,29 @@ p {
 /* For medium screens sizes from 950px wide and down */
 @media screen and (max-width: 950px) {
 
-    #cover-text {
-        left: 250px;
+
+    header {
+        flex-direction: column;
     }
+
+    header a {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
     .intro-heading>h2 {
         font-size: 25px;
     }
+
     #mission-statement>img {
         width: 80%;
         padding-left: 50px;
     }
+
     video {
         width: 50%;
         height: auto;
         padding-left: 100px;
-      }
+    }
 }
